--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project(flexer CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(flexer_demo main.cpp)
-target_include_directories(flexer_demo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+set(CMAKE_BUILD_TYPE Release)
+
+add_executable(demo demo.cpp)
+target_include_directories(demo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
